Fixed text and icon overlap
Fixed the location icon and text overlap on the main website

--- a/css/theme-lava.css
+++ b/css/theme-lava.css
@@ -2276,6 +2276,7 @@ footer.short .top-border {
   display: inline-block;
   position: relative;
   bottom: 10px;
+  top: 4px;
   left: 8px;
   font-size: 16px;
 }
